--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,11 +58,9 @@
     <string name="team_leader">(Team Leader)</string>
     <string name="ammar_thaaer">Ammar Thaaer</string>
     <string name="team_member">(Team Member)</string>
-    <string name="shahlaa_haider">Shahlaa Haider</string>
     <string name="zahraa_zahir">Zahraa Zahir</string>
-    <string name="nofel_jummaa">Nofel Jummaa</string>
-    <string name="anwar_alfarhany">Anwar Alfarhany</string>
-    <string name="tamara_mouneer">Tamara Mouneer</string>
+    <string name="zainab_mahmood">Zainab Mahmood</string>
+    <string name="karrar_mohammed">Karrar Mohammed</string>
     <string name="instructor">(Instructor)</string>
     <string name="bareq_al_taamah">Bareq AL-Taamah</string>
 
