change vaccines description in fragment vaccines

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,14 +31,17 @@
     <string name="if_fever_is_so_high_call_doctor_for_advice"><li>If fever is so high call the doctor for advice.</li></string>
     <string name="let_s_get_vaccinated">Let\'s get Vaccinated!</string>
     <string name="free_safe_protected">FREE, SAFE, PROTECTED</string>
-    <string name="recommended_for_nadults_18_and_older">Recommended for:\nAdults 18 and older</string>
     <string name="sinopharm">SINOPHARM</string>
     <string name="pfizer">PFIZER</string>
-    <string name="recommended_for_12">Recommended for:\nAnyone 12 or older.</string>
+    <string name="eligibility_12"><li>Eligibility: Ages 12 and up.</li></string>
     <string name="astrazeneca">ASTRAZENECA</string>
-    <string name="recommended_for_18">Recommended for:\nAdults 18 and older.</string>
+    <string name="eligibility_18"><li>Eligibility: Ages 18 and up</li>.</string>
     <string name="moderna">MODERNA</string>
     <string name="j_and_j"><![CDATA[J&J]]></string>
+    <string name="mrna"><li>Vaccine Type: \nmessenger RNA</li></string>
+    <string name="adenovirus_vector_vaccine"><li>Vaccine Type: \nAdenovirus vector</li></string>
+    <string name="non_replicating_viral_vector"><li>Vaccine Type: \nNon-replicating viral vector</li></string>
+    <string name="inactivated_virus"><li>Vaccine Type:\nInactivated virus</li></string>
     <string name="total_cases">TOTAL CASES</string>
     <string name="vaccine_name">Vaccine Name</string>
     <string name="_50">50%</string>
