--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="total_cases">TOTAL CASES</string>
     <string name="vaccine_name">Vaccine Name</string>
     <string name="_50">50%</string>
-    <string name="doses_taken">Doses Taken</string>
+    <string name="shots">Shots</string>
     <string name="_70">70%</string>
     <string name="effectiveness">Effectiveness</string>
     <string name="description">General Information</string>
